Implemented multi sinks.

--- a/config/application.conf
+++ b/config/application.conf
@@ -1,6 +1,6 @@
 json {
   file {
-    name = "ps2bq-append-test.json"
+    name = "ps2bq-proto-without-bq-schema.json"
     name = ${?JSON_FILE_NAME}
   }
 }
