--- a/config/application.conf
+++ b/config/application.conf
@@ -1,6 +1,6 @@
 json {
   file {
-    name = "ps2bq-proto-without-bq-schema-multi-test.json"
+    name = "rule1-windowed.json"
     name = ${?JSON_FILE_NAME}
   }
 }
