--- a/config/application.conf
+++ b/config/application.conf
@@ -1,6 +1,6 @@
 json {
   file {
-    name = "ps2bq-avro-without-bq-schema.json"
+    name = "tensorflow-inception.json"
     name = ${?JSON_FILE_NAME}
   }
 }
