Lookup Datastore as part of a transformation

--- a/sot-executor/src/it/resources/application.datastore.test.conf
+++ b/sot-executor/src/it/resources/application.datastore.test.conf
@@ -1,8 +1,14 @@
 include "application.conf"
 
+project = "bi-crm-poc"
+
 json {
   file {
     name = "ps2ps-test.json"
     name = ${?JSON_FILE_NAME}
   }
+}
+
+datastore {
+  kind = "testkind1"
 }
