--- a/config/application.conf
+++ b/config/application.conf
@@ -1,6 +1,12 @@
+project = "bi-crm-poc"
+
 json {
   file {
-    name = "tensorflow-inception.json"
+    name = "ps2ps-test.json"
     name = ${?JSON_FILE_NAME}
   }
+}
+
+datastore {
+  kind = "testkind1"
 }
