additional options for pubsub

--- a/config/application.conf
+++ b/config/application.conf
@@ -2,7 +2,7 @@ project = "bi-crm-poc"
 
 json {
   file {
-    name = "ps2ds-with-schema-test.json"
+    name = "ps2bq-test.json"
     name = ${?JSON_FILE_NAME}
   }
 }
