--- a/config/application.conf
+++ b/config/application.conf
@@ -2,7 +2,7 @@ project = "bi-crm-poc"
 
 json {
   file {
-    name = "ps2ps-test.json"
+    name = "ps2bq-avro-without-bq-schema-tuple.json"
     name = ${?JSON_FILE_NAME}
   }
 }
