Adding a ps2bp json for lookups

--- a/config/application.conf
+++ b/config/application.conf
@@ -1,6 +1,6 @@
 json {
   file {
-    name = "ps2ps-test.json"
+    name = "ps2bq-avro-without-bq-schema-lookup.json"
     name = ${?JSON_FILE_NAME}
   }
 }
