stateful processing with global window

--- a/config/application.conf
+++ b/config/application.conf
@@ -1,6 +1,6 @@
 json {
   file {
-    name = "tensorflow-vip-state.json"
+    name = "tensorflow-vip-state-preprocessing.json"
     name = ${?JSON_FILE_NAME}
   }
 }
