--- a/config/application.conf
+++ b/config/application.conf
@@ -1,6 +1,6 @@
 json {
   file {
-    name = "kf2ds-json-saf-trimmed.json"
+    name = "kf2ds-json-bets.json"
     name = ${?JSON_FILE_NAME}
   }
 }
