Added GoogleStorage tests.

--- a/config/application.conf
+++ b/config/application.conf
@@ -1,6 +1,6 @@
 json {
   file {
-    name = "kf2bq-json-cashflow.json"
+    name = "gs2ds-groupby-test.json"
     name = ${?JSON_FILE_NAME}
   }
 }
