--- a/config/application.conf
+++ b/config/application.conf
@@ -1,6 +1,6 @@
 json {
   file {
-    name = "kf2bq-json-betslips.json"
+    name = "kf2bq-json-customers.json"
     name = ${?JSON_FILE_NAME}
   }
 }
